--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>index</title>
-</head>
-<body>
-<a href="/admin">admin</a></br>
-<a href="/login">login</a></br>
-<a href="/logout">logout</a></br>
-<a href="/login/vm">login/vm</a></br>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}EWS - Top Page{% endblock %}
+
+{% block content %}
+{% endblock %}
