--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+
+{% block title %}EWS - VM List{% endblock %}
+
+{% block content %}
 {% if vms %}
 <ul>
 {% for vm in vms %}
@@ -7,3 +12,4 @@
 {% else %}
 <p>No polls are available.</p>
 {% endif %}
+{% endblock %}
