--- a/vm/templates/vm/create_vm.html
+++ b/vm/templates/vm/create_vm.html
@@ -1,14 +1,13 @@
-<html> 
-<head> 
-<title>Create Virtual Machine Form</title> 
-</head>
-<body>
-<h1>Create Virtual Machine Form</h1> 
-<form action="" method="post"> {% csrf_token %}
+{% extends "base.html" %}
+
+{% block title %}EWS - Create VM{% endblock %}
+
+{% block content %}
+
 <table>  
 {{form.as_table}} 
 <tr><td colspan='2'><input type="submit" value="Submit"></td></tr>
 </table> 
 </form>
-</body>
-</html>
+
+{% endblock %}
