login/logoutのボタンを追加

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">login/logout</a></li>
+            <li><a href="/login">login</a></li>
+            <li><a href="/logout">logout</a></li>
           </ul>
         </div>
       </div>
