--- a/noVNC/templates/noVNC/vnc_auto.html
+++ b/noVNC/templates/noVNC/vnc_auto.html
@@ -1,24 +1,10 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+
 {% load static from staticfiles %}
-<html>
-<head>
 
-    <!--
-    noVNC example: simple example using default UI
-    Copyright (C) 2012 Joel Martin
-    Copyright (C) 2013 Samuel Mannehed for Cendio AB
-    noVNC is licensed under the MPL 2.0 (see LICENSE.txt)
-    This file is licensed under the 2-Clause BSD license (see LICENSE.txt).
+{% block title %}EWS - noVNC{% endblock %}
 
-    Connect parameters are provided in query string:
-        http://example.com/?host=HOST&port=PORT&encrypt=1&true_color=1
-    -->
-    <title>noVNC</title>
-
-    <meta charset="utf-8">
-
-    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-                Remove this if you use the .htaccess -->
+{% block additional_head %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- Apple iOS Safari settings -->
@@ -29,24 +15,19 @@
     <link rel="apple-touch-startup-image" href="{% static "noVNC/images/screen_320x460.png" %}" />
     <!-- For iOS devices set the icon to use if user bookmarks app on their homescreen -->
     <link rel="apple-touch-icon" href="{% static "noVNC/images/screen_57x57.png" %}">
-    <!--
-    <link rel="apple-touch-icon-precomposed" href="images/screen_57x57.png" />
-    -->
 
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="{% static "noVNC/include/base.css" %}" title="plain">
 
-     <!--
-    <script type='text/javascript'
-        src='http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js'></script>
-    -->
         <script>
           var INCLUDE_URI="{% static "noVNC/include/" %}";
         </script>
         <script src="{% static "noVNC/include/util.js" %}"></script>
 </head>
+{% endblock %}
 
+{% block content %}
 <body style="margin: 0px;">
     <div id="noVNC_screen">
             <div id="noVNC_status_bar" class="noVNC_status_bar" style="margin-top: 0px;">
@@ -243,4 +224,4 @@
         </script>
 
     </body>
-</html>
+{% endblock %}
