--- a/noVNC/templates/noVNC/vnc_auto.html
+++ b/noVNC/templates/noVNC/vnc_auto.html
@@ -5,223 +5,199 @@
 {% block title %}EWS - noVNC{% endblock %}
 
 {% block additional_head %}
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-    <!-- Apple iOS Safari settings -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <!-- App Start Icon  -->
-    <link rel="apple-touch-startup-image" href="{% static "noVNC/images/screen_320x460.png" %}" />
-    <!-- For iOS devices set the icon to use if user bookmarks app on their homescreen -->
-    <link rel="apple-touch-icon" href="{% static "noVNC/images/screen_57x57.png" %}">
-
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="{% static "noVNC/include/base.css" %}" title="plain">
-
-        <script>
-          var INCLUDE_URI="{% static "noVNC/include/" %}";
-        </script>
-        <script src="{% static "noVNC/include/util.js" %}"></script>
 </head>
 {% endblock %}
 
 {% block content %}
-<body style="margin: 0px;">
-    <div id="noVNC_screen">
-            <div id="noVNC_status_bar" class="noVNC_status_bar" style="margin-top: 0px;">
-                <table border=0 width="100%"><tr>
-                    <td><div id="noVNC_status" style="position: relative; height: auto;">
-                        Loading
-                    </div></td>
-                    <td width="1%"><div id="noVNC_buttons">
-                        <input type=button value="Send CtrlAltDel"
-                            id="sendCtrlAltDelButton">
-                        <span id="noVNC_xvp_buttons">
-                        <input type=button value="Shutdown"
-                            id="xvpShutdownButton">
-                        <input type=button value="Reboot"
-                            id="xvpRebootButton">
-                        <input type=button value="Reset"
-                            id="xvpResetButton">
-                        </span>
-                            </div></td>
-                </tr></table>
-            </div>
-            <canvas id="noVNC_canvas" width="640px" height="20px">
-                Canvas not supported.
-            </canvas>
-        </div>
+<div class="row">
+  <div class="col-lg-12">
+    <span id="noVNC_status"></span>
+    <div id="noVNC_buttons" class="btn-group pull-right">
+      <button type="button" class="btn btn-default" id="sendCtrlAltDelButton" >Ctrl+Alt+Del</button>
+      <button type="button" class="btn btn-default" id="xvpShutdownButton" >Shutdown</button>
+      <button type="button" class="btn btn-default" id="xvpRebootButton" >Reboot</span></button>
+      <button type="button" class="btn btn-default" id="xvpResetButton" >Reset</button>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-12" id="noVNC_canvas_parent">
+    <canvas id="noVNC_canvas" class="center-block">
+        Canvas not supported.
+    </canvas>
+  </div>
+</div>
+{% endblock %}
 
-        <script>
-        /*jslint white: false */
-        /*global window, $, Util, RFB, */
-        "use strict";
+{% block additional_body %}
+<script>
+  var INCLUDE_URI="{% static "noVNC/include/" %}";
+</script>
+<script src="{% static "noVNC/include/util.js" %}"></script>
+<script src="{% static "noVNC/include/webutil.js" %}"></script>
+<script src="{% static "noVNC/include/base64.js" %}"></script>
+<script src="{% static "noVNC/include/websock.js" %}"></script>
+<script src="{% static "noVNC/include/des.js" %}"></script>
+<script src="{% static "noVNC/include/keysymdef.js" %}"></script>
+<script src="{% static "noVNC/include/keyboard.js" %}"></script>
+<script src="{% static "noVNC/include/input.js" %}"></script>
+<script src="{% static "noVNC/include/display.js" %}"></script>
+<script src="{% static "noVNC/include/jsunzip.js" %}"></script>
+<script src="{% static "noVNC/include/rfb.js" %}"></script>
+<script src="{% static "noVNC/include/keysym.js" %}"></script>
 
-        // Load supporting scripts
-        Util.load_scripts(["webutil.js", "base64.js", "websock.js", "des.js",
-                           "keysymdef.js", "keyboard.js", "input.js", "display.js",
-                           "jsunzip.js", "rfb.js", "keysym.js"]);
+<script>
+"use strict";
+var rfb;
+var resizeTimeout;
 
-        var rfb;
-        var resizeTimeout;
+function FBUComplete(rfb, fbu) {
+    rfb.set_onFBUComplete(function() { });
+}
+function passwordRequired(rfb) {
+    var msg;
+    msg = '<form onsubmit="return setPassword();"';
+    msg += '  style="margin-bottom: 0px">';
+    msg += 'Password Required: ';
+    msg += '<input type=password size=10 id="password_input" class="noVNC_status">';
+    msg += '<\/form>';
+    $('#noVNC_status_bar').attr("class", "noVNC_status_warn");
+    $('#noVNC_status').html(msg);
+}
+function setPassword() {
+    rfb.sendPassword($('#password_input').value());
+    return false;
+}
+function sendCtrlAltDel() {
+    rfb.sendCtrlAltDel();
+    return false;
+}
+function xvpShutdown() {
+    rfb.xvpShutdown();
+    return false;
+}
+function xvpReboot() {
+    rfb.xvpReboot();
+    return false;
+}
+function xvpReset() {
+    rfb.xvpReset();
+    return false;
+}
+function updateState(rfb, state, oldstate, msg) {
+    var s, sb, cad, level;
+    s = $('#noVNC_status');
+    sb = $('#noVNC_status_bar');
+    cad = $('#sendCtrlAltDelButton');
+    switch (state) {
+        case 'failed':       level = "error";  break;
+        case 'fatal':        level = "error";  break;
+        case 'normal':       level = "normal"; break;
+        case 'disconnected': level = "normal"; break;
+        case 'loaded':       level = "normal"; break;
+        default:             level = "warn";   break;
+    }
 
+    if (state === "normal") {
+        cad.attr("disabled", false);
+    } else {
+        cad.attr("disabled", true);
+        xvpInit(0);
+    }
 
-        function UIresize() {
-            if (WebUtil.getQueryVar('resize', false)) {
-                var innerW = window.innerWidth;
-                var innerH = window.innerHeight;
-                var controlbarH = $D('noVNC_status_bar').offsetHeight;
-                var padding = 5;
-                if (innerW !== undefined && innerH !== undefined)
-                    rfb.setDesktopSize(innerW, innerH - controlbarH - padding);
-            }
-        }
-        function FBUComplete(rfb, fbu) {
-            UIresize();
-            rfb.set_onFBUComplete(function() { });
-        }
-        function passwordRequired(rfb) {
-            var msg;
-            msg = '<form onsubmit="return setPassword();"';
-            msg += '  style="margin-bottom: 0px">';
-            msg += 'Password Required: ';
-            msg += '<input type=password size=10 id="password_input" class="noVNC_status">';
-            msg += '<\/form>';
-            $D('noVNC_status_bar').setAttribute("class", "noVNC_status_warn");
-            $D('noVNC_status').innerHTML = msg;
-        }
-        function setPassword() {
-            rfb.sendPassword($D('password_input').value);
-            return false;
-        }
-        function sendCtrlAltDel() {
-            rfb.sendCtrlAltDel();
-            return false;
-        }
-        function xvpShutdown() {
-            rfb.xvpShutdown();
-            return false;
-        }
-        function xvpReboot() {
-            rfb.xvpReboot();
-            return false;
-        }
-        function xvpReset() {
-            rfb.xvpReset();
-            return false;
-        }
-        function updateState(rfb, state, oldstate, msg) {
-            var s, sb, cad, level;
-            s = $D('noVNC_status');
-            sb = $D('noVNC_status_bar');
-            cad = $D('sendCtrlAltDelButton');
-            switch (state) {
-                case 'failed':       level = "error";  break;
-                case 'fatal':        level = "error";  break;
-                case 'normal':       level = "normal"; break;
-                case 'disconnected': level = "normal"; break;
-                case 'loaded':       level = "normal"; break;
-                default:             level = "warn";   break;
-            }
+    if (typeof(msg) !== 'undefined') {
+        sb.attr("class", "noVNC_status_" + level);
+        s.html(msg);
+    }
+}
 
-            if (state === "normal") {
-                cad.disabled = false;
-            } else {
-                cad.disabled = true;
-                xvpInit(0);
-            }
+function xvpInit(ver) {
+    var xvpbuttons;
+    xvpbuttons = $('#noVNC_xvp_buttons');
+    if (ver >= 1) {
+        xvpbuttons.css("display", 'inline');
+    } else {
+        xvpbuttons.css("display", 'none');
+    }
+}
+function fbResize(rfb, width, height) {
+  var aspect = height/width;
+  $("#noVNC_canvas").width($("#noVNC_canvas_parent").width());
+  $("#noVNC_canvas").height($("#noVNC_canvas_parent").width()*aspect);
+}
 
-            if (typeof(msg) !== 'undefined') {
-                sb.setAttribute("class", "noVNC_status_" + level);
-                s.innerHTML = msg;
-            }
-        }
+function parse_getperameter()
+{
+  var i;
+  var p = location.href.split("?");
+  if(p.length < 2){
+    return {};
+  }
+  var p2 = p[1].split("&");
+  var params = {};
+  for ( i = 0; i < p2.length; i++ ) {
+      var kv= p2[i].split("=");
+      if(kv.length == 2){
+        params[kv[0]] = kv[1];
+      }
+  }
+  return params;
+}
 
-        window.onresize = function () {
-            // When the window has been resized, wait until the size remains
-            // the same for 0.5 seconds before sending the request for changing
-            // the resolution of the session
-            clearTimeout(resizeTimeout);
-            resizeTimeout = setTimeout(function(){
-                UIresize();
-            }, 500);
-        };
+$(function(){
+var path, token;
+var params;
+var host;
+var port;
+var password;
 
-        function xvpInit(ver) {
-            var xvpbuttons;
-            xvpbuttons = $D('noVNC_xvp_buttons');
-            if (ver >= 1) {
-                xvpbuttons.style.display = 'inline';
-            } else {
-                xvpbuttons.style.display = 'none';
-            }
-        }
+params = parse_getperameter();
+host = params["host"];
+port = params["port"];
+password = params["password"];
+path = 'websockify';
 
-        window.onscriptsload = function () {
-            var host, port, password, path, token;
+if(host === undefined || port === undefined || password === undefined || path === undefined){
+  // todo error handling
+  console.log("error!");
+  return;
+}
 
-            $D('sendCtrlAltDelButton').style.display = "inline";
-            $D('sendCtrlAltDelButton').onclick = sendCtrlAltDel;
-            $D('xvpShutdownButton').onclick = xvpShutdown;
-            $D('xvpRebootButton').onclick = xvpReboot;
-            $D('xvpResetButton').onclick = xvpReset;
+$('#sendCtrlAltDelButton').css("display", "inline");
+$('#sendCtrlAltDelButton').click(sendCtrlAltDel);
+$('#xvpShutdownButton').click(xvpShutdown);
+$('#xvpRebootButton').click(xvpReboot);
+$('#xvpResetButton').click(xvpReset);
 
-            WebUtil.init_logging(WebUtil.getQueryVar('logging', 'warn'));
-            document.title = unescape(WebUtil.getQueryVar('title', 'noVNC'));
-            // By default, use the host and port of server that served this file
-            host = WebUtil.getQueryVar('host', window.location.hostname);
-            port = WebUtil.getQueryVar('port', window.location.port);
+try {
+  rfb = new RFB({'target':$('#noVNC_canvas')[0],
+                 'encrypt':false,
+                 'repeaterID':'',
+                 'true_color':true,
+                 'local_cursor': 'cursor',
+                 'shared': 'shared',
+                 'view_only': 'false',
+                 'onUpdateState': updateState,
+                 'onXvpInit': xvpInit,
+                 'onPasswordRequired': passwordRequired,
+                 'onFBUComplete': FBUComplete,
+                 'onFBResize': fbResize(),
+  });
+} catch (exc) {
+  console.log(exc);
+  // todo error handling
+  return;
+}
 
-            // if port == 80 (or 443) then it won't be present and should be
-            // set manually
-            if (!port) {
-                if (window.location.protocol.substring(0,5) == 'https') {
-                    port = 443;
-                }
-                else if (window.location.protocol.substring(0,4) == 'http') {
-                    port = 80;
-                }
-            }
+console.log(host, port, password, path);
+rfb.connect(host, port, password, path);
 
-            // If a token variable is passed in, set the parameter in a cookie.
-            // This is used by nova-novncproxy.
-            token = WebUtil.getQueryVar('token', null);
-            if (token) {
-                WebUtil.createCookie('token', token, 1)
-            }
+$(window).resize(function(){
+  var aspect = $("#noVNC_canvas").height()/$("#noVNC_canvas").width();
+  $("#noVNC_canvas").width($("#noVNC_canvas_parent").width());
+  $("#noVNC_canvas").height($("#noVNC_canvas_parent").width()*aspect);
+});
 
-            password = WebUtil.getQueryVar('password', '');
-            path = WebUtil.getQueryVar('path', 'websockify');
-
-            if ((!host) || (!port)) {
-                updateState('failed',
-                    "Must specify host and port in URL");
-                return;
-            }
-
-            try {
-                rfb = new RFB({'target':       $D('noVNC_canvas'),
-                               'encrypt':      WebUtil.getQueryVar('encrypt',
-                                        (window.location.protocol === "https:")),
-                               'repeaterID':   WebUtil.getQueryVar('repeaterID', ''),
-                               'true_color':   WebUtil.getQueryVar('true_color', true),
-                               'local_cursor': WebUtil.getQueryVar('cursor', true),
-                               'shared':       WebUtil.getQueryVar('shared', true),
-                               'view_only':    WebUtil.getQueryVar('view_only', false),
-                               'onUpdateState':  updateState,
-                               'onXvpInit':    xvpInit,
-                               'onPasswordRequired':  passwordRequired,
-                               'onFBUComplete': FBUComplete});
-            } catch (exc) {
-                UI.updateState(null, 'fatal', null, 'Unable to create RFB client -- ' + exc);
-                return; // don't continue trying to connect
-            }
-
-            rfb.connect(host, port, password, path);
-        };
-        </script>
-
-    </body>
+});
+</script>
 {% endblock %}
