--- a/noVNC/templates/noVNC/vnc_auto.html
+++ b/noVNC/templates/noVNC/vnc_auto.html
@@ -180,7 +180,7 @@ try {
                  'onXvpInit': xvpInit,
                  'onPasswordRequired': passwordRequired,
                  'onFBUComplete': FBUComplete,
-                 'onFBResize': fbResize(),
+                 'onFBResize': fbResize,
   });
 } catch (exc) {
   console.log(exc);
