--- a/vm/templates/vm/fin.htm
+++ b/vm/templates/vm/fin.htm
@@ -1,18 +1,10 @@
-{% extends "base.html" %}
-
-{% load static from staticfiles %}
-
-{% block title %}EWS - VM List{% endblock %}
-
-{% block additional_head %}
-{% endblock %}
-{% block content %}
-
-<script src="{% static "statistics/js/jquery-1.8.2.min.js" %}"></script>
-<script src="{% static "statistics/js/highcharts.js" %}"></script>
-
-
-<script type="text/javascript">
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>Highcharts Example</title>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script type="text/javascript">
 
 $(function () {
     Highcharts.SparkLine = function (options, callback) {
@@ -48,8 +40,6 @@ $(function () {
                 tickPositions: []
             },
             yAxis: {
-              min:0,
-              max:1,
                 endOnTick: false,
                 startOnTick: false,
                 labels: {
@@ -77,7 +67,7 @@ $(function () {
             },
             plotOptions: {
                 series: {
-                    animation: false,
+                    //animation: false,
                     lineWidth: 1,
                     shadow: false,
                     states: {
@@ -106,17 +96,17 @@ $(function () {
         return new Highcharts.Chart(options, callback);
     };
 
-    $tds = $("td[data-sparkline]"),
-    console.log("tds!!!!!!!!!!!!!!");
-    console.log($tds);
-    fullLen = $tds.length,
-    n = 0;
+        $tds = $("td[data-sparkline]"),
+        fullLen = $tds.length,
+        n = 0;
 
     function getAndDraw($td){
+            console.log("td");
+            console.log($td);
             stringdata = $td.data('sparkline');
             console.log(stringdata);
             jQuery.ajax({ 
-              url: "/static/statistics/data/cpuusage/"+stringdata,
+              url: stringdata,
               type: "GET",
               dataType: "text",
               success: function(data) {
@@ -158,59 +148,47 @@ $(function () {
 
         }
     }
-
-
-var StartTimer, StopTimer, Timer, time, timerID;
-
-time = 2;
-timerID = 0;
-
-StartTimer = function() {
-  timerID = setInterval(Timer/*定期的に呼び出す関数名*/, 1000/*呼び出す間隔*/);
-};
-
-StopTimer = function() {
-  timerID= 0;
-  //clearOnterval(timerID);
-};
-
-Timer = function() {
-  time = time + 1;
-  console.log(time);
-  if (time > 2) {
     doChunk();
-    time = 0;
-    return;
-  }
-};
-
-StartTimer();
-
-
 });
-</script>
+		</script>
 
 
-{% if vms %}
-<ul>
+
+	</head>
+	<body>
+<script src="../../js/highcharts.js"></script>
+
 <table border=H3>
-  <tr>
-    <td>VMname</td>
-    <td>Display</td>
-    <td>state</td>
-    <td width="100%">CPUusage</td>
-  </tr>
-  {% for vm in vms %}
-  <tr>
-    <td>{{vm.name}}</td>
-    <td><a href="{% url 'noVNC:index'%}?host=157.82.3.111&port={{vm.vncport}}&password={{vm.password}}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}"/></center></a></td>
-    <td> {{ vm.state }}</td>
-    <td data-sparkline=  "{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
-  </tr>
-{% endfor %}
+        <tr>
+            <td>VMname</td>
+            <td>Display</td>
+            <td width="100%">CPUusage</td>
+        </tr>
+        <tr>
+            <td>PIYO</td>
+            <td><a href="/noVNC/?host=157.82.3.111&port=5801&password=eWVMVtgoOL"  >Display</a></td>
+            <td data-sparkline="04505ee9-6b9c-41a5-a801-3b04f47ce66f.txt"/>
+        </tr>
+        <tr>
+            <td>PIYO</td>
+            <td><a href="/noVNC/?host=157.82.3.111&port=5801&password=eWVMVtgoOL"  >Display</a></td>
+            <td data-sparkline="5782ab20-ec53-4774-973c-dc7296ae44c6.txt"/>
+        </tr>
+        <tr>
+            <td>PIYO</td>
+            <td><a href="/noVNC/?host=157.82.3.111&port=5801&password=eWVMVtgoOL"  >Display</a></td>
+            <td data-sparkline="99813d85-cf59-4806-a980-da245e523160.txt"/>
+        </tr>
+        <tr>
+            <td>PIYO</td>
+            <td><a href="/noVNC/?host=157.82.3.111&port=5801&password=eWVMVtgoOL"  >Display</a></td>
+            <td data-sparkline="ce69db35-8585-4c5d-b3ac-a9a90610a24a.txt"/>
+        </tr>
+
+
+
 </table>
-</ul>
-{% else %}
-<p>You have no VMs</p>
-{% endif %}
-{% endblock %}
+	</body>
+</html>
+
+
