--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -11,24 +11,35 @@
 <script src="{% static "statistics/js/jquery-1.8.2.min.js" %}"></script>
 <script src="{% static "statistics/js/highcharts.js" %}"></script>
 
+    <style type="text/css">
+  .highcharts-tooltip>span {
+  	background: white;
+  	border: 1px solid silver;
+  	border-radius: 3px;
+  	box-shadow: 1px 1px 2px #888;
+  	padding: 8px;
+  }
+  </style>
 
 <script type="text/javascript">
 
 $(function () {
-    Highcharts.SparkLine = function (options, callback) {
+    Highcharts.CpuUsage = function (options, callback) {
         var defaultOptions = {
             chart: {
                 renderTo: (options.chart && options.chart.renderTo) || this,
                 backgroundColor: null,
                 borderWidth: 0,
-                type: 'area',
+                type: 'line',
+                //margin: [0, 0, 0, 0],
                 margin: [2, 0, 2, 0],
-                width: 120,
-                height: 20,
+                width: 200,
+                height: 60,
                 style: {
                     overflow: 'visible'
                 },
-                skipClone: true
+                //type: 'area',
+                //zoomType: "xy",
             },
             title: {
                 text: ''
@@ -48,8 +59,8 @@ $(function () {
                 tickPositions: []
             },
             yAxis: {
-              min:0,
-              max:1,
+                min: 0,
+                max: 1,
                 endOnTick: false,
                 startOnTick: false,
                 labels: {
@@ -61,6 +72,7 @@ $(function () {
                 tickPositions: [0]
             },
             legend: {
+                //must
                 enabled: false
             },
             tooltip: {
@@ -78,7 +90,10 @@ $(function () {
             plotOptions: {
                 series: {
                     animation: false,
+                    pointInterval: 5*1000,
+                    pointStart: (new Date()).getTime()-300-540*60*1000,
                     lineWidth: 1,
+                    fillOpacity: 0.25,
                     shadow: false,
                     states: {
                         hover: {
@@ -93,72 +108,83 @@ $(function () {
                             }
                         }
                     },
-                    fillOpacity: 0.25
                 },
-                column: {
-                    negativeColor: '#910000',
-                    borderColor: 'silver'
-                }
             }
         };
         options = Highcharts.merge(defaultOptions, options);
-
         return new Highcharts.Chart(options, callback);
     };
 
-    $tds = $("td[data-sparkline]"),
-    console.log("tds!!!!!!!!!!!!!!");
-    console.log($tds);
-    fullLen = $tds.length,
-    n = 0;
+    $tds = $("td[data-cpuusage]")
 
-    function getAndDraw($td){
-            stringdata = $td.data('sparkline');
-            console.log(stringdata);
+    function epochToLocal(time){
+      var d = new Date(time); 
+      return [
+        d.getFullYear(),
+        d.getMonth() + 1,
+        d.getDate()
+      ].join( '/' ) + ' '
+      + d.toLocaleTimeString();
+    }
+
+    var drawlist = new Object();
+    function Draw(){
+      for(i = 0; i < $tds.length;i++){
+            $td = $($tds[i]);
+            chart = {};
+            $td.highcharts('CpuUsage', {
+                series: drawlist[i],
+                tooltip: {
+                    formatter: function () {
+                      return '<span style="font-size: 10px">' + epochToLocal(this.x) +", "+this.y+ ":</span><br/>"
+                    }
+                },
+                chart: chart,
+                colors: ['#008ECF','#F0EA30','#70BE47', '#F82F66', '#F55A21' ]
+            });
+
+      }
+    }
+
+    function RequestAndSet(idx, urlname){
+            $td = $($tds[idx]);
             jQuery.ajax({ 
-              url: "/static/statistics/data/cpuusage/"+stringdata,
+              url: "/static/statistics/data/cpuusage/"+urlname,
               type: "GET",
               dataType: "text",
               success: function(data) {
-                      data = data.split(/\r\n|\r|\n/);
-                      for(j=0; j<data.length; j++){
-                              if(isNaN(data[j].split(":")[1])){
-                                data[j] = 0;
-                              }else{
-                              data[j] = Number(data[j].split(":")[1]);
-                              }
-                      }
-                      console.log("data");
-                      console.log(data);
-            chart = {};
-            $td.highcharts('SparkLine', {
-                series: [{
-                    data: data,
-                    pointStart: 1
-                }],
-                tooltip: {
-                    headerFormat: '<span style="font-size: 10px">' + $td.parent().find('th').html() + ', Q{point.x}:</span><br/>',
-                    pointFormat: '<b>{point.y}.000</b> USD'
-                },
-                chart: chart
+                  data = data.split(/\r\n|\r|\n/);
+                  for(j=0; j<data.length; j++){
+                     if(isNaN(data[j].split(":")[1])){
+                       data[j] = 0;
+                     }else{
+                       data[j] = Number(data[j].split(":")[1]);
+                     }
+                  }
+                  if(idx in drawlist){
+                    drawlist[idx].push({data: data});
+                  }else{
+                    drawlist[idx] = [];
+                    drawlist[idx].push({data: data});
+                  }
+              }
             });
-           }
-         });
+    }
+
+    function parseCpuUsage(idx){
+            $td = $($tds[idx]);
+            stringdata = $td.data('cpuusage');
+            stringdata = stringdata.split(",");
+            for(cpu = 0; cpu < stringdata.length; cpu++){
+              RequestAndSet(idx, stringdata[cpu]);
+            }
     }
     
-    function doChunk() {
-        var i,
-            len = $tds.length,
-            $td,
-            stringdata,
-            arr
-        for (i = 0; i < len; i += 1) {
-            $td = $($tds[i]);
-            getAndDraw($td);
-
+    function SendRequest() {
+        for (idx = 0; idx < $tds.length; idx += 1) {
+            parseCpuUsage(idx);
         }
     }
-
 
 var StartTimer, StopTimer, Timer, time, timerID;
 
@@ -178,18 +204,17 @@ Timer = function() {
   time = time + 1;
   console.log(time);
   if (time > 2) {
-    doChunk();
+    Draw();
     time = 0;
+    SendRequest();
     return;
   }
 };
 
+SendRequest();
 StartTimer();
-
-
 });
 </script>
-
 
 {% if vms %}
 <ul>
@@ -202,10 +227,10 @@ StartTimer();
   </tr>
   {% for vm in vms %}
   <tr>
-    <td>{{vm.name}}</td>
+    <td><center>{{vm.name}}</center></td>
     <td><a href="{% url 'noVNC:index'%}?host=157.82.3.111&port={{vm.vncport}}&password={{vm.password}}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}"/></center></a></td>
     <td> {{ vm.state }}</td>
-    <td data-sparkline=  "{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
+    <td data-cpuusage="{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
   </tr>
 {% endfor %}
 </table>
