--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+{% load static from staticfiles %}
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -42,6 +43,7 @@
     </div>
   </div>
 
+  <script src="{% static "statistics/js/jquery-1.11.3.min.js" %}"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script>
   </script>
