--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 {% load static from staticfiles %}
 <html>
 <head>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>{% block title %}{% endblock %}</title>
 
