--- a/vm/templates/vm/create_vm.html
+++ b/vm/templates/vm/create_vm.html
@@ -1,11 +1,24 @@
 {% extends "base.html" %}
 
+{% load static from staticfiles %}
+
 {% block title %}EWS - Create VM{% endblock %}
 
 {% block content %}
 
+<link rel="stylesheet" type="text/css" href="{% static "vm/css/bootstrap-select.min.css" %}">
+<script src="{% static "vm/js/bootstrap-select.min.js" %}"></script>
+
+<script type="text/javascript">
+        $(window).on('load', function () {
+            $('.selectpicker').selectpicker({
+                'selectedText': 'cat',
+            });
+        });
+</script>
+
 <form action="" method="post"> {% csrf_token %}
-<table>  
+<table class="table table-striped table-bordered">
 {{form.as_table}} 
 <tr><td colspan='2'><input type="submit" value="Submit"></td></tr>
 </table> 
