--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -19,8 +19,6 @@
   }
   </style>
 
-{% endblock %}
-{% block additional_body %}
 <script src="{% static "statistics/js/highcharts.js" %}"></script>
 <script type="text/javascript">
 
@@ -217,6 +215,7 @@ $(function () { StartTimer(); });
 {% if vms %}
 <ul>
 <table border=H3>
+<table class="table table-striped table-bordered">
   <tr>
     <td>VMname</td>
     <td>Display</td>
@@ -228,6 +227,7 @@ $(function () { StartTimer(); });
   <tr>
     <td><center>{{vm.name}}</center></td>
     <td><a href="{% url 'noVNC:index'%}?host={{HYPERVISOR_URL}}&port={{vm.vncport}}&password={{vm.password}}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}"/></center></a></td>
+    <td><a href="{% url 'noVNC:index'%}?host=157.82.3.111&port={{vm.vncport}}&password={{vm.password}}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}" class="img-responsive" alt="Responsive image"/></center></a></td>
     <td> {{ vm.state }}</td>
     <td data-cpuusage="{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
     <td><a href="{% url 'vm:edit' vm_id=vm.id %}">Edit</a></td>
