--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -19,8 +19,6 @@
   }
   </style>
 
-{% endblock %}
-{% block additional_body %}
 <script src="{% static "statistics/js/highcharts.js" %}"></script>
 <script type="text/javascript">
 
@@ -221,7 +219,7 @@ StartTimer();
 
 {% if vms %}
 <ul>
-<table border=H3>
+<table class="table table-striped table-bordered">
   <tr>
     <td>VMname</td>
     <td>Display</td>
@@ -231,7 +229,7 @@ StartTimer();
   {% for vm in vms %}
   <tr>
     <td><center>{{vm.name}}</center></td>
-    <td><a href="{% url 'noVNC:index'%}?host=157.82.3.111&port={{vm.vncport}}&password={{vm.password}}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}"/></center></a></td>
+    <td><a href="{% url 'noVNC:index'%}?host=157.82.3.111&port={{vm.vncport}}&password={{vm.password}}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}" class="img-responsive" alt="Responsive image"/></center></a></td>
     <td> {{ vm.state }}</td>
     <td data-cpuusage="{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
   </tr>
