Don't use jquery in local

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,13 +37,13 @@
         {% block content %}{% endblock %}
       </div>
     </div>
-    
+
     <div id="footer">
       Copyright(c) 2015 group-2015-1-a1-course
     </div>
   </div>
 
-  <script src="{% static "statistics/js/jquery-1.11.3.min.js" %}"></script>
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script>
   </script>
