embedded-parameter-novncからの引き継ぎです．JSの方も対応させて， URL引数を取り除きました．

--- a/noVNC/templates/noVNC/vnc_auto.html
+++ b/noVNC/templates/noVNC/vnc_auto.html
@@ -54,9 +54,6 @@
 
 <script>
 "use strict";
-var rfb;
-var resizeTimeout;
-
 function FBUComplete(rfb, fbu) {
     rfb.set_onFBUComplete(function() { });
 }
@@ -151,13 +148,14 @@ function parse_getperameter()
 }
 
 $(function(){
+var rfb;
 var path, token;
 var params;
 var host;
 var port;
 var password;
 
-params = parse_getperameter();
+params = $.parseJSON($('#novnc-parameter').html())
 host = params["host"];
 port = params["port"];
 password = params["password"];
