--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/login">login</a></li>
-            <li><a href="/logout">logout</a></li>
+            <li><a href="{% url 'login' %}">login</a></li>
+            <li><a href="{% url 'logout' %}">logout</a></li>
           </ul>
         </div>
       </div>
@@ -30,9 +30,9 @@
     <div class="row">
       <div class="col-lg-3" id="sidebar">
         <div class="list-group" style="cursor: pointer;">
-          <a class="list-group-item" href="/">Top</a>
-          <a class="list-group-item" href="/login/vm">VM List</a>
-          <a class="list-group-item" href="/login/vm/create_vm">Create VM</a>
+          <a class="list-group-item" href="{% url 'home' %}">Top</a>
+          <a class="list-group-item" href="{% url 'vm:index' %}">VM List</a>
+          <a class="list-group-item" href="{% url 'vm:new' %}">Create VM</a>
         </div>
       </div>
       <div class="col-lg-9" id="content">
