--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -213,7 +213,6 @@ $(function () { StartTimer(); });
 </script>
 
 {% if vms %}
-<ul>
 <table class="table table-striped table-bordered">
   <tr>
     <td>VMname</td>
@@ -221,6 +220,7 @@ $(function () { StartTimer(); });
     <td>state</td>
     <td width="100%">CPUusage</td>
     <td>Controls</td>
+    <td>Delete</td>
   </tr>
   {% for vm in vms %}
   <tr>
@@ -229,10 +229,10 @@ $(function () { StartTimer(); });
     <td> {{ vm.state }}</td>
     <td data-cpuusage="{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
     <td><a href="{% url 'vm:edit' vm_id=vm.id %}">Edit</a></td>
+    <td><a href="{% url 'vm:delete' vm_id=vm.id %}">Delete</a></td>
   </tr>
 {% endfor %}
 </table>
-</ul>
 {% else %}
 <p>You have no VMs</p>
 {% endif %}
