--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -229,7 +229,12 @@ $(function () { StartTimer(); });
     <td> {{ vm.state }}</td>
     <td data-cpuusage="{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
     <td><a href="{% url 'vm:edit' vm_id=vm.id %}">Edit</a></td>
-    <td><a href="{% url 'vm:delete' vm_id=vm.id %}">Delete</a></td>
+    <td>
+    <form method="post" action="{% url 'vm:delete' vm_id=vm.id %}">
+      {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Delete</button>
+    </form>
+    </td>
   </tr>
 {% endfor %}
 </table>
