--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -20,7 +20,7 @@
 </table>
 
 <input type="submit" value="login" />
-<input type="hidden" name="next" value="vm" />
+<input type="hidden" name="next" value="{% url 'accounts:index' %}" />
 </form>
 
 {% endblock %}
