Show alert messages when logged_{in, out} or {create, edit, delete}_vm

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,11 @@
         </div>
       </div>
       <div class="col-lg-9" id="content">
+        {% if messages %}
+          {% for message in messages %}
+          <div{% if message.tags %} class="alert alert-{{ message.tags }}" role="alert"{% endif %}>{{ message }}</div>
+          {% endfor %}
+        {% endif %}
         {% block content %}{% endblock %}
       </div>
     </div>
