make cpuusage png smart

--- a/vm/templates/vm/info.html
+++ b/vm/templates/vm/info.html
@@ -75,5 +75,5 @@
       </div>
 <h3>Statistics</h3>
 <h5>CPU</h5>
-      <img src="{% static "statistics/data/cpupng/5c7cddf2-1ca6-4f48-a02e-37f0b9ebdb13.1.rrd" %}" class="img-responsive">
+      <img src="{% static "statistics/data/cpupng/" %}{{vm.uuid}}.png" class="img-responsive">
 {% endblock %}
