comment at info.html(TODO show from VM)

--- a/vm/templates/vm/info.html
+++ b/vm/templates/vm/info.html
@@ -22,6 +22,8 @@
   </tr>
 </table>
 
+
+<!-- TODO show from vm --!>
 <h3>Disk</h3>
       <div  class="container">
         <table class="table">
@@ -49,6 +51,7 @@
 
 
 
+<!-- TODO show from vm --!>
 <h3>Network</h3>
       <div  class="container">
         <table class="table">
