fix html syntax (comment)

--- a/vm/templates/vm/info.html
+++ b/vm/templates/vm/info.html
@@ -22,7 +22,7 @@
   </tr>
 </table>
 
-<!-- TODO show from vm --!>
+<!-- TODO show from vm -->
 <h3>Disk</h3>
         <table class="table table-striped table-bordered">
         <thead>
@@ -46,7 +46,7 @@
         </tbody>
       </table>
 
-<!-- TODO show from vm --!>
+<!-- TODO show from vm -->
 <h3>Network</h3>
         <table class="table table-striped table-bordered">
         <thead>
