--- a/vm/templates/vm/edit.html
+++ b/vm/templates/vm/edit.html
@@ -4,11 +4,7 @@
 
 {% block content %}
 
-<form action="{% url 'vm:edit' vm.id %}" method="post"> {% csrf_token %}
-<table>
-{{form.as_table}}
-<tr><td colspan='2'><input type="submit" value="Submit"></td></tr>
-</table>
-</form>
+{% url 'vm:edit' vm.id as form_url %}
+{% include 'vm/_form.html' with url=form_url form=form %}
 
 {% endblock %}
