Add power on and shutdown button

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,11 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="{% static "js/animate.css" %}">
+  <style type="text/css">
+    form.post-button {
+      display: inline-block;
+    }
+  </style>
   {% block additional_head %}{% endblock %}
 </head>
 <body>
