move center and fix header of table

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
     form.post-button {
       display: inline-block;
     }
+    .table tbody tr td{
+      vertical-align: middle;
+    }
   </style>
   {% block additional_head %}{% endblock %}
 </head>
