--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
 
 {% block content %}
 <div class="text-center">
-  <img src="{% static "top/top_image.png" %}">
+  <img src="{% static "top/top_image.png" %}" style="width: 100%;">
 </div>
 {% endblock %}
