--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -228,7 +228,7 @@ $(function () { StartTimer(); });
     <td><a href="{% url 'noVNC:index' vm_id=vm.id %}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}" class="img-responsive" alt="Responsive image"/></center></a></td>
     <td> {{ vm.state }}</td>
     <td data-cpuusage="{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
-    <td><a href="{% url 'vm:edit' vm_id=vm.id %}">Edit</a></td>
+    <td>{% include 'vm/_powercontrol.html' with vm=vm %}</td>
     <td>
     <form method="post" action="{% url 'vm:delete' vm_id=vm.id %}">
       {% csrf_token %}
