--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -139,7 +139,7 @@ $(function () {
                     }
                 },
                 chart: chart,
-                colors: ['#008ECF','#F0EA30','#70BE47', '#F82F66', '#F55A21' ]
+                colors: ['#0000FF','#FF0000','#00FF00', '#FFFF00', '#00FFFF', '#FF00FF']
             });
 
       }
@@ -161,12 +161,8 @@ $(function () {
                        plotdata[j] = Number(data[j].split(":")[1]);
                      }
                   }
-                  if(idx in drawlist){
-                    drawlist[idx].push({data: plotdata});
-                  }else{
-                    drawlist[idx] = [];
-                    drawlist[idx].push({data: plotdata});
-                  }
+                  cpunum = Number(urlname.split(".")[1]);
+                  drawlist[idx][cpunum-1].data = plotdata;
               }
             });
     }
@@ -181,6 +177,17 @@ $(function () {
     }
 
     function SendRequest() {
+
+        for (idx = 0; idx < $tds.length; idx += 1) {
+            $td = $($tds[idx]);
+            stringdata = $td.data('cpuusage');
+            stringdata = stringdata.split(",");
+            drawlist[idx] = [];
+            for(cpu = 0; cpu < stringdata.length; cpu++){
+              drawlist[idx].push({data: 0});
+            }
+        }
+
         for (idx = 0; idx < $tds.length; idx += 1) {
             parseCpuUsage(idx);
         }
@@ -191,7 +198,7 @@ var StartTimer, StopTimer, Timer, time, timerID;
 timerID = 0;
 
 StartTimer = function() {
-  Timer();
+  SendRequest();
   timerID = setInterval(Timer/*定期的に呼び出す関数名*/, 3000/*呼び出す間隔*/);
 };
 
@@ -212,25 +219,25 @@ $(function () { StartTimer(); });
 });
 </script>
 
-{% if vms %}
+{% if vms_for_index %}
 <table class="table table-striped table-bordered">
   <tr>
     <td>VMname</td>
     <td>Display</td>
     <td>state</td>
-    <td width="100%">CPUusage</td>
     <td>Controls</td>
+    <td width="100%">CPUusage</td>
     <td>Delete</td>
   </tr>
-  {% for vm in vms %}
+  {% for vm_for_index in vms_for_index %}
   <tr>
-    <td><center><a href="{% url 'vm:info' vm_id=vm.id %}">{{vm.name}}</a></center></td>
-    <td><a href="{% url 'noVNC:index' vm_id=vm.id %}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}" class="img-responsive" alt="Responsive image"/></center></a></td>
-    <td> {{ vm.state }}</td>
-    <td data-cpuusage="{% for cpu in cpus %}{% if forloop.last %}{{vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
-    <td>{% include 'vm/_powercontrol.html' with vm=vm %}</td>
+    <td><center><a href="{% url 'vm:info' vm_id=vm_for_index.vm.id %}">{{vm_for_index.vm.name}}</a></center></td>
+    <td><a href="{% url 'noVNC:index' vm_id=vm_for_index.vm.id %}"  ><center><img src="{% static "vm/png/glyphicons-87-display.png" %}" class="img-responsive" alt="Responsive image"/></center></a></td>
+    <td> {{ vm_for_index.vm.state }}</td>
+    <td>{% include 'vm/_powercontrol.html' with vm=vm_for_index.vm %}</td>
+    <td data-cpuusage="{% for cpu in vm_for_index.cpulist %}{% if forloop.last %}{{vm_for_index.vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm_for_index.vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
     <td>
-    <form method="post" action="{% url 'vm:delete' vm_id=vm.id %}">
+    <form method="post" action="{% url 'vm:delete' vm_id=vm_for_index.vm.id %}">
       {% csrf_token %}
     <button type="submit" class="btn btn-danger">Delete</button>
     </form>
