Refine _form.html
- Load js and stylesheet globally
- Apply bootstrap to submit button

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <script src="{% static "js/application.js" %}"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>{% block title %}{% endblock %}</title>
+  <script src="{% static "vm/js/bootstrap-select.min.js" %}"></script>
 
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
