--- a/vm/templates/vm/_form.html
+++ b/vm/templates/vm/_form.html
@@ -1,21 +1,10 @@
-{% load static from staticfiles %}
-
-<link rel="stylesheet" type="text/css" href="{% static "vm/css/bootstrap-select.min.css" %}">
-<script src="{% static "vm/js/bootstrap-select.min.js" %}"></script>
-
-<script type="text/javascript">
-    $(window).on('load', function () {
-        $('.selectpicker').selectpicker({
-            'selectedText': 'cat',
-        });
-    });
-</script>
-
 <form action="{{ url }}" method="post"> {% csrf_token %}
   <table class="table table-striped table-bordered">
     {{ form.as_table }}
     <tr>
-      <td colspan='2'><input type="submit" value="Submit"></td>
+      <td colspan='2'>
+        <button class="btn btn-default" type="submit">Submit</button>
+      </td>
     </tr>
   </table>
 </form>
