--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -31,7 +31,6 @@ $(function () {
                 type: 'line',
                 //margin: [0, 0, 0, 0],
                 margin: [2, 0, 2, 0],
-                width: 200,
                 height: 60,
                 style: {
                     overflow: 'visible'
@@ -220,18 +219,21 @@ $(function () { StartTimer(); });
 
 {% if vms_for_index %}
 <table class="table table-striped table-bordered text-center">
+<thead>
   <tr>
     <td>VM Name</td>
     <td>Display</td>
     <td>State</td>
     <td>Controls</td>
-    <td width="100%">CPU Usage</td>
+    <td style="width:100%;">CPU Usage</td>
     <td>Delete</td>
   </tr>
+</thead>
+<tbody>
   {% for vm_for_index in vms_for_index %}
   <tr>
     <td><a href="{% url 'vm:info' vm_id=vm_for_index.vm.id %}">{{vm_for_index.vm.name}}</a></td>
-    <td><a href="{% url 'noVNC:index' vm_id=vm_for_index.vm.id %}"><img src="{% static "vm/png/glyphicons-87-display.png" %}" class="img-responsive" alt="Responsive image"/></a></td>
+    <td><a href="{% url 'noVNC:index' vm_id=vm_for_index.vm.id %}"><img src="{% static "vm/png/glyphicons-87-display.png" %}" class="img-responsive center-block" alt="Responsive image"/></a></td>
     <td>{{ vm_for_index.vm.state }}</td>
     <td>{% include 'vm/_powercontrol.html' with vm=vm_for_index.vm %}</td>
     <td data-cpuusage="{% for cpu in vm_for_index.cpulist %}{% if forloop.last %}{{vm_for_index.vm.uuid}}.{{forloop.counter}}.txt"{% else %}{{vm_for_index.vm.uuid}}.{{forloop.counter}}.txt,{% endif %}{% endfor %}/>
@@ -242,6 +244,7 @@ $(function () { StartTimer(); });
     </form></td>
   </tr>
 {% endfor %}
+</tbody>
 </table>
 {% else %}
 <p>You have no VMs</p>
