--- a/vm/templates/vm/info.html
+++ b/vm/templates/vm/info.html
@@ -41,7 +41,7 @@
   </tr>
   <tr>
     <td>State</td>
-    <td>{{vm.state}} {% include 'vm/_powercontrol.html' with vm=vm %}</td>
+    <td>{{vm.state}} <span class="pull-right">{% include 'vm/_powercontrol.html' with vm=vm %}</span></td>
   </tr>
 </table>
 
@@ -70,10 +70,10 @@
         <table class="table table-striped table-bordered">
         <thead>
           <tr>
-            <th>interfaces</th>
-            <th>source</th>
-            <th>mac address</th>
-            <th>type</th>
+            <th>#</th>
+            <th>Source</th>
+            <th>MAC Address</th>
+            <th>Type</th>
           </tr>
         </thead>
         <tbody>
