--- a/vm/templates/vm/index.html
+++ b/vm/templates/vm/index.html
@@ -225,7 +225,7 @@ $(function () { StartTimer(); });
     <td>Display</td>
     <td>State</td>
     <td>Controls</td>
-    <td style="width:100%;">CPU Usage</td>
+    <td>CPU Usage</td>
     <td>Delete</td>
   </tr>
 </thead>
